# BoundedSystemsTheory

./: .demerzel_key  .env.example  .gitignore  ALL_QUESTIONS.md  CLAUDE_CHECK_FIRST.md  CONTRIBUTING.md  DISCOURSE_LEARNING_PLAN.md  EXPERIMENT_OVERVIEW.md  FORMAL_SPECIFICATION.md  HSAP_PROBE_COMPILATION.md  LICENSE  OPEN_LETTER_FROM_5_AIS.md  PREDICTIONS.md  README.md  README.txt  action_ledger.py  alerts.json  article_formatter.py  autonomous_loop.py  baseline_check.py  brain_controller.TEXT_ONLY.BAK.py  brain_controller.py  brain_controller.py.BACKUP_BEFORE_CONTROLLER_FIX_20251229_124246  brain_controller.py.BACKUP_BEFORE_REPLACE_20251229_115655  bst_deliberation.py  challenge_poster.py  code_executor.py  cognitive_router.py  comprehension_rules.py  config.py  content_poster.py  contract_challenge.py  contract_review.py  contradiction_acknowledgment.py  conversation_predictions.py  cookie_poster.py  cross_post.py  cross_reflection.py  demerzel.py  demerzel_brain.py  (+94 more)
_archive/: PRD_V2_NORTH_STAR.md  arduino_cmd.py  baseline_check.py  baseline_lock.json  brain.py  brain_contract.py  brain_controller.BROKEN.py  brain_controller.BROKEN_20260103_155559.py  code_executor.py  cognitive_router.py  confirm_test.py  conftest.py  context_manager.py  conversational_gaps.py  conversational_router.py  decision_ledger.py  decision_leger.py  demerzel.db  demerzel_memory.db  demerzel_run.sh  demo_brain_cli.py  hardware_backend.py  hardware_executor.py  identity_responder.py  ledger_view.py  memory_store.py  multi_model_cognitive.py  output.txt  pattern_detect.py  r_coherence_checker.py  (+16 more)
(+694 files in other folders)
