[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solomons-temple"
version = "1.0.0"
description = "Admin Console for Bounded Systems Theory - 8 subsystems unified through the 3-6-9 Integration Bus"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Jamie Nucho"}
]
keywords = [
    "gematria",
    "i-ching",
    "sacred-geometry",
    "numerology",
    "digital-root",
    "bounded-systems-theory"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
solomon = "solomon.cli:main"

[project.urls]
Homepage = "https://github.com/jamienucho/solomons-temple"
Documentation = "https://github.com/jamienucho/solomons-temple#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["solomon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
